:bug: Fix alignment of link in tooltip

--- a/src/components/delegateRegistration/summary/summary.css
+++ b/src/components/delegateRegistration/summary/summary.css
@@ -24,7 +24,7 @@
   }
 }
 
-footer {
+.summaryContainer > footer {
   width: 100%;
   box-sizing: border-box;
   display: flex;
